# travis-stack-test

./: .travis.yml  TestLib.html  deploy.sh  deploy_key.enc  doc-index.html  index-frames.html  index.html  mini_TestLib.html  stack.yaml  testlib.cabal  testlib.haddock  testlib.txt
src/: TestLib.hs
test/: Spec.hs
